Updated the the connector bits to parse jlog instead of xml. closes #185